[gd_scene load_steps=7 format=2]

[ext_resource path="res://scn/waves/wave.gd" type="Script" id=1]
[ext_resource path="res://scn/Enemy.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
resource_name = "move_forward"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("wrapper/enemies:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1.57969e-05 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 1.25 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "move_left"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("wrapper/enemies:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1.57969e-05 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -1.25, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "move_right"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("wrapper/enemies:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1.57969e-05 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 1.25, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "spawn"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -14 ), Vector3( 0, 0, 6 ) ]
}

[node name="Wave" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6 )
script = ExtResource( 1 )
final_speed = 10.0

[node name="bonus_spawn_left" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 0, -3 )

[node name="bonus_spawn_right" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 0, -3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/move_forward = SubResource( 1 )
anims/move_left = SubResource( 2 )
anims/move_right = SubResource( 3 )
anims/spawn = SubResource( 4 )

[node name="wrapper" type="Spatial" parent="."]

[node name="enemies" type="Spatial" parent="wrapper"]
editor/display_folded = true

[node name="Enemy57" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 0, 3 )

[node name="Enemy73" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 3 )

[node name="Enemy58" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 3 )

[node name="Enemy80" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 3 )

[node name="Enemy59" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, 3 )

[node name="Enemy74" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 3 )

[node name="Enemy60" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 3 )

[node name="Enemy76" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 3 )

[node name="Enemy61" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 3 )

[node name="Enemy64" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 3 )

[node name="Enemy62" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 3 )

[node name="Enemy79" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, 3 )

[node name="Enemy63" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )

[node name="Enemy65" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 0, 11 )

[node name="Enemy82" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 11 )

[node name="Enemy66" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 11 )

[node name="Enemy83" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 11 )

[node name="Enemy67" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, 11 )

[node name="Enemy78" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 11 )

[node name="Enemy68" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 11 )

[node name="Enemy85" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 11 )

[node name="Enemy69" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 11 )

[node name="Enemy75" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 11 )

[node name="Enemy70" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 11 )

[node name="Enemy72" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, 11 )

[node name="Enemy71" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 11 )

[node name="Enemy48" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 0, 7 )

[node name="Enemy55" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 7 )

[node name="Enemy49" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 7 )

[node name="Enemy56" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 7 )

[node name="Enemy50" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, 7 )

[node name="Enemy84" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 7 )

[node name="Enemy51" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 7 )

[node name="Enemy77" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 7 )

[node name="Enemy52" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 7 )

[node name="Enemy81" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 7 )

[node name="Enemy53" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 7 )

[node name="Enemy86" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, 7 )

[node name="Enemy54" parent="wrapper/enemies" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7 )

[node name="add_bonus1" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="add_bonus2" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="add_bonus3" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="add_bonus4" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="bonus_idle" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="timeout" from="add_bonus1" to="add_bonus2" method="start"]
[connection signal="timeout" from="add_bonus1" to="." method="spawnBonus" binds= [ "DoubleShot", "left" ]]
[connection signal="timeout" from="add_bonus2" to="add_bonus3" method="start"]
[connection signal="timeout" from="add_bonus2" to="." method="spawnBonus" binds= [ "Speed", "right" ]]
[connection signal="timeout" from="add_bonus3" to="add_bonus4" method="start"]
[connection signal="timeout" from="add_bonus3" to="." method="spawnBonus" binds= [ "Shield", "left" ]]
[connection signal="timeout" from="add_bonus4" to="bonus_idle" method="start"]
[connection signal="timeout" from="add_bonus4" to="." method="spawnBonus" binds= [ "RegenWalls", "right" ]]
[connection signal="timeout" from="bonus_idle" to="add_bonus1" method="start"]
